2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	Initial import into version control.


 Copyright 2009 Israel G. Lugo.

 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.