@@ -1,5 +1,12 @@
 2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>
 
+	Add simple command-line interface for testing uses.
+	* src/compare.py: Add shebang. Implement command-line interface that
+	reads filename arguments from argv and prints the result to stdout.
+
+
+2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>
+
 	Initial import into version control.
 
 
